# PyMon

./: .gitignore  LICENSE  README.md  installer.iss  pyproject.toml  test_db.py  test_sde_lookups.py
.github/workflows/: ci.yml  release.yml
pymon/: __init__.py  __main__.py
pymon/api/: __init__.py  assets.py  blueprints.py  bookmarks.py  calendar.py  character.py  clones.py  contacts.py  contracts.py  corporation.py  esi_client.py  fatigue.py  fittings.py  fleet.py  fw.py  industry.py  killmails.py  location.py  loyalty.py  mail.py  market.py  mining.py  notifications.py  opportunities.py  planets.py  research.py  search.py  skills.py  status.py  universe.py  wallet.py
pymon/auth/: __init__.py  callback_server.py  sso.py  token_manager.py
pymon/core/: app.py  config.py  database.py
pymon/models/: blueprints.py  character.py  contacts.py  contracts.py  fittings.py  industry.py  killmails.py  mail.py  market.py  misc.py  notifications.py  planets.py
pymon/sde/: __init__.py  database.py  loader.py  updater.py
pymon/services/: calendar_export.py  character_service.py  cloud_sync.py  email_notifier.py  market_service.py  name_resolver.py  notification_parser.py  skill_planner.py  update_checker.py
pymon/ui/: api_tester_widget.py  attribute_optimizer_widget.py  certificate_browser_widget.py  character_comparison_widget.py  dark_theme.py  data_browser_widget.py  dockable_tab_widget.py  implant_calculator_widget.py  loadout_import_dialog.py  main_window.py  market_browser_widget.py  owned_skill_books_widget.py  path_finder_widget.py  schedule_editor_widget.py  settings_dialog.py  ship_browser_widget.py  sidebar_nav.py  skill_planner_widget.py  skills_pie_chart_widget.py  sortable_table_widget.py  trade_advisor_widget.py  trade_tracker_widget.py  wallet_chart_widget.py  window_manager.py
tests/: test_config.py  test_esi_client.py  test_sde.py
